<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/action_share"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_pdf"
        android:icon="@drawable/ic_pdf"
        android:title="@string/action_pdf"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_print"
        android:icon="@drawable/ic_print"
        android:title="@string/action_print"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_copy"
        android:title="@string/action_copy"
        app:showAsAction="never" />
</menu>
